[package]
name = "memoise"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
description = "Simple memoization library for rust"
repository = "https://github.com/tanakh/memoise"
documentation = "https://docs.rs/memoise"
edition = "2018"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
