[package]
name = "memoise"
version = "0.3.2"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
description = "Simple memoization library for rust"
repository = "https://github.com/tanakh/memoise"
readme = "README.md"
edition = "2018"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
